--- a/personalWebsite/website/index.html
+++ b/personalWebsite/website/index.html
@@ -38,9 +38,12 @@
 		<div id="intro-section" class="container-fluid">
 		  <h1>David Valdez</h1>
 			  <p> Hello! My name is David Valdez. I am a sophomore studying Computer Science at the University of Southern California.
-			  I've always been interested in technology from a young age, however, I had no clue of the many branches within technology. After taking
-			  an introduction course to C++ (ofcourse!), I quickly fell for the subject and haven't looked back since. The things one is able to create
-			  with a few lines of code pretty much does it for me. 
+			  I've always been interested in technology from a young age, however, I was not aware of the many branches within technology. I became
+			  the black sheep of my family once I made the move to engineering compeletely. I've always wanted to excel in math and science and when I 
+			  realized Economics and Business (no love lost, right?) did not offer that, I looked into something else.
+			  </br>
+			  After taking an introduction course to C++ at LAVC, I realized this was my true calling. Entering USC, I skipped the orientation I was 
+			  registered for and attended the engineering orientation; I haven't looked back since.
 			</p>
 		</div>
 		<div id="interests-section" class="container-fluid">
